# saber

./: .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  handler.hpp
cmake/: catchorg.catch2.cmake  cxxflags_common.cmake
doc/doxygen/: CMakeLists.txt  Doxyfile.in  Doxyfile.in.bak  doxygen.css  expand_href_includes.sh  footer.html  header.html
doc/doxygen/html/: footer.html
doc/web/: footer.html  head_include.html  header.html  styles.css
include/saber/: codereview.hpp  conditionals.hpp  config.hpp  exception.hpp  handler.hpp  hash.hpp  inexact.hpp  utility.hpp
include/saber/event/: events.hpp
include/saber/geometry/: comparator.hpp  config.hpp  matrix.hpp  operators.hpp  point.hpp  rectangle.hpp  size.hpp  utility.hpp
include/saber/geometry/detail/: impl.hpp  impl2.hpp  impl4.hpp  impl8.hpp  matrix_helper.hpp  simd.hpp  simd_neon.hpp  simd_sse.hpp  simd_traits.hpp
test/: CMakeLists.txt  geometry_benchmark.cpp  geometry_unittest.cpp  geometry_unittest2.cpp  handler.cpp  handler_benchmark.cpp  handler_unittest.cpp  saber_benchmark.cpp  saber_benchmark.hpp  saber_test.cpp  saber_unittest.cpp  saber_unittest.hpp  utility_unittest.cpp
